@@ -86,42 +86,6 @@ the F<foo.1>
 
 =cut
 
-# This expand_path expands all path "." and ".." components, but doesn't
-# resolve symbolic links.
-sub expand_path {
-	my $start = @_ ? shift : '.';
-	my @pathname = split(m:/+:,$start);
-
-	my $entry;
-	my @respath;
-	foreach $entry (@pathname) {
-		if ($entry eq '.' || $entry eq '') {
-			# Do nothing
-		}
-		elsif ($entry eq '..') {
-			if ($#respath == -1) {
-				# Do nothing
-			}
-			else {
-				pop @respath;
-			}
-		}
-		else {
-			push @respath, $entry;
-		}
-	}
-
-	my $result;
-	foreach $entry (@respath) {
-		$result .= '/' . $entry;
-	}
-	if (! defined $result) {
-		$result="/"; # special case
-	}
-	return $result;
-}
-
-
 init();
 
 foreach my $package (@{$dh{DOPACKAGES}}) {
@@ -173,55 +137,8 @@ foreach my $package (@{$dh{DOPACKAGES}}) {
 	
 	while (@links) {
 		my $dest=pop @links;
-		my $src=expand_path(pop @links);
-
-		$src=~s:^/::;
-		$dest=~s:^/::;
-		
-		if ($src eq $dest) {
-			warning("skipping link from $src to self");
-			next;
-		}
-
-		# Make sure the directory the link will be in exists.
-		my $basedir=dirname("$tmp/$dest");
-		if (! -e $basedir) {
-			doit("install","-d",$basedir);
-		}
-		
-		# Policy says that if the link is all within one toplevel
-		# directory, it should be relative. If it's between
-		# top level directories, leave it absolute.
-		my @src_dirs=split(m:/+:,$src);
-		my @dest_dirs=split(m:/+:,$dest);
-		if (@src_dirs > 0 && $src_dirs[0] eq $dest_dirs[0]) {
-		    	# Figure out how much of a path $src and $dest
-			# share in common.
-			my $x;
-			for ($x=0; $x < @src_dirs && $src_dirs[$x] eq $dest_dirs[$x]; $x++) {}
-			# Build up the new src.
-			$src="";
-			for (1..$#dest_dirs - $x) {
-				$src.="../";
-			}
-			for ($x .. $#src_dirs) {
-				$src.=$src_dirs[$_]."/";
-			}
-			if ($x > $#src_dirs && ! length $src) {
-				$src.="."; # special case
-			}
-			$src=~s:/$::;
-		}
-		else {
-			# Make sure it's properly absolute.
-			$src="/$src";
-		}
-
-		if (-d "$tmp/$dest" && ! -l "$tmp/$dest") {
-			error("link destination $tmp/$dest is a directory");
-		}
-		doit("rm", "-f", "$tmp/$dest");
-		doit("ln","-sf", $src, "$tmp/$dest");
+		my $src=pop @links;
+		make_symlink($dest, $src, $tmp);
 	}
 }
 
