@@ -263,6 +263,10 @@ load_log($package, $hashref)
 write_log($cmd, $package ...)
 	Writes the log files for the specified package(s), adding
 	the cmd to the end.
+make_symlink($src, $dest, $tmp)
+	Creates a Policy compliant sytem link called $dest pointing to
+	$src. If $tmp is given, then $tmp will be prefixed to $dest when
+	creating the actual symlink.
 
 Sequence Addons:
 ---------------
