@@ -18,6 +18,9 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * dh_icons: Apply patch from Jérémy Bobbio to ensure stable
     ordering of the icon list inserted into generated maintainer
     scripts.  (Closes: #774102)
+  * Dh_lib: Add a public "make_symlink" subroutine allowing
+    dh_*-like tools to generate policy compliant symlinks without
+    invoking dh_link.  (Closes: #610173)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
